--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "devDependencies": {
     "@babel/core": "^7.20.12",
     "@babel/eslint-parser": "^7.15.0",
-    "@nuxt/image-edge": "1.0.0-27919678.2f5b64b",
     "@nuxtjs/eslint-config": "^6.0.1",
     "@nuxtjs/eslint-module": "^3.0.2",
     "eslint": "^7.32.0",
@@ -24,6 +23,8 @@
     "webpack": "^5.75.0"
   },
   "dependencies": {
-    "@nuxtjs/tailwindcss": "6.1.3"
+    "@nuxt/image-edge": "1.0.0-27919678.2f5b64b",
+    "@nuxtjs/tailwindcss": "6.1.3",
+    "@vueuse/nuxt": "^9.13.0"
   }
 }
