--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@nuxt/image-edge": "1.0.0-27919678.2f5b64b",
+    "@nuxtjs/supabase": "^0.3.1",
     "@nuxtjs/tailwindcss": "6.1.3",
     "@vueuse/nuxt": "^9.13.0"
   }
