--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@nuxt/image-edge": "1.0.0-27919678.2f5b64b",
     "@nuxtjs/supabase": "^0.3.1",
     "@nuxtjs/tailwindcss": "6.1.3",
+    "@prisma/client": "4.11.0",
     "@vueuse/nuxt": "^9.13.0",
+    "joi": "^17.8.3",
     "prisma": "^4.11.0"
   }
 }
